--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {"test": "echo \"Error: no test specified\" && exit 1","build-css": 
-    "node-sass --include-path scss scss/estilos.scss css/main.css",
+    "node-sass --include-path scss scss/estilo.scss css/estilo.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""},
   "author": "",
   "license": "ISC",
